@@ -27,6 +27,8 @@ Fixes:
    exceeded during evaluation. Reported by Amberyl. [MG]
  * Fix a few bugs in handling of command locks. [SW]
  * Garbage objects could be matched by dbref. Reported by Paige. [MG]
+ * No longer complain about reboot.db not being present when we're not
+   doing a @shutdown/reboot anyway. Reported by Paige. [MG]
 
 
 Version 1.8.4 patchlevel 0                                 May 09,  2010
